# pretty-error-debug

./: Cargo.toml  README.md
.github/workflows/: ci.yml
derive/: Cargo.toml  README.md
derive/src/: lib.rs
examples/: nested-error-with-wrapper.rs  nested-error.rs
src/: implementation.rs  lib.rs  test.rs
test-normal-import/: Cargo.toml
test-normal-import/src/: lib.rs  test.rs
test-renamed-import/: Cargo.toml
test-renamed-import/src/: lib.rs  test.rs
test-shadowed-core/: Cargo.toml
