[package]
name = "pretty-error-debug"
version = "0.2.0"
authors = ["René Kijewski <crates.io@k6i.de>"]
repository = "https://github.com/Kijewski/pretty-error-debug"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.60"
description = "Write out the `Error` message and chain."

[dependencies]
pretty-error-debug-derive = { version = "0.2.0", optional = true, path = "derive" }

[dev-dependencies]
thiserror = "1.0.40"

[features]
default = ["derive"]
derive = ["dep:pretty-error-debug-derive"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = [
    ".",
    "derive",
    "test-normal-import",
    "test-renamed-import",
]
