[package]
name = "pretty-error-debug"
version = "0.3.0"
authors = ["René Kijewski <crates.io@k6i.de>"]
repository = "https://github.com/Kijewski/pretty-error-debug"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"
description = "Write out the `Error` message and chain."

[dependencies]
pretty-error-debug-derive = { version = "0.3.0", optional = true, path = "derive" }

[dev-dependencies]
thiserror = "2.0.3"

[features]
default = ["derive"]
derive = ["pretty-error-debug-derive"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = [".", "derive"]
