[package]
name = "pretty-error-debug"
version = "0.3.2"
authors = ["René Kijewski <crates.io@k6i.de>"]
repository = "https://github.com/Kijewski/pretty-error-debug"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.61"
description = "If the process ends with an `Error`, write out the `Error` message and chain."
categories = ["rust-patterns", "no-std", "command-line-interface"]
keywords = ["error", "error-handling", "cli", "no-std"]

[dependencies]
pretty-error-debug-derive = { version = "0.3.1", optional = true, path = "derive" }
rustversion = "1.0.0"

[dev-dependencies]
thiserror = "2.0.12"

[features]
default = ["derive"]
derive = ["pretty-error-debug-derive"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = [".", "derive"]

[lints.rust]
unsafe_code = "forbid"

absolute_paths_not_starting_with_crate = "warn"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
meta_variable_misuse = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
non_ascii_idents = "warn"
noop_method_call = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
unreachable_pub = "warn"
unused_lifetimes = "warn"
unused_results = "warn"
warnings = "warn"

[lints.clippy]
collapsible_match = "warn"
expect_used = "warn"
match_bool = "warn"
match_ref_pats = "warn"
match_same_arms = "warn"
match_single_binding = "warn"
needless_bool = "deny"
needless_late_init = "warn"
needless_match = "warn"
redundant_guards = "warn"
redundant_pattern = "warn"
redundant_pattern_matching = "warn"
single_match = "warn"
single_match_else = "warn"
# unwrap_used = "warn"
