[package]
name = "pretty-error-debug-derive"
version = "0.1.1"
authors = ["René Kijewski <crates.io@k6i.de>"]
repository = "https://github.com/Kijewski/pretty-error-debug"
license = "MIT OR Apache-2.0 WITH LLVM-exception"
edition = "2018"
# rust-version = "1.31"
description = "Derive `std::fmt::Debug` using `pretty_error_debug`"

[lib]
proc-macro = true

[dependencies]
find-crate = "0.6.3"
quote = "1.0.7"
syn = "1.0.33"
toml = "0.7.3"
