[package]
name = "pretty-error-debug-derive"
version = "0.3.1"
authors = ["René Kijewski <crates.io@k6i.de>"]
repository = "https://github.com/Kijewski/pretty-error-debug"
license = "MIT OR Apache-2.0 WITH LLVM-exception"
edition = "2021"
rust-version = "1.56"
description = "Derive `std::fmt::Debug` using `pretty_error_debug`"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.7"
syn = "2.0.0"
